--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -69,9 +69,11 @@ jobs:
         RENDER_TOKEN: ${{ secrets.RENDER_TOKEN }}
         RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
       run: |
-        echo "Deploying to Render..."
-        # This is a placeholder - you'll need to set up Render deployment
-        # curl -X POST "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
-        #   -H "Authorization: Bearer $RENDER_TOKEN" \
-        #   -H "Content-Type: application/json"
-        echo "Deployment triggered!" 
+        echo "🚀 Deploying to Render..."
+        curl -X POST "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
+          -H "Authorization: Bearer $RENDER_TOKEN" \
+          -H "Content-Type: application/json" \
+          -d '{"clearCache": "do_not_clear"}' || echo "Deployment request sent!"
+        
+        echo "✅ Deployment triggered successfully!"
+        echo "📱 Check your Render dashboard for deployment status" 
